<resources>
    <string name="app_name">MYEDU</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">forgot password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>
</resources>